<resources>
    <string name="app_name" translatable="false">PROJET-IoT</string>
    <string name="sensor_name">sensor name</string>
    <string name="sensor_value">sensor value</string>
    <string name="sensor_logo">Sensor Logo</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="adresse_ip">Adresse IP</string>
    <string name="port">port</string>
    <string name="double_dots" translatable="false">:</string>
    <string name="set">SET</string>
    <string name="last_update">Last update: %1$s</string>
</resources>