<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sensor_img"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/sensor_logo"
        app:srcCompat="@drawable/device_thermostat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/sensor_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="6dp"
        android:textSize="18sp"
        android:text="@string/sensor_name"
        app:layout_constraintStart_toEndOf="@+id/sensor_img"
        app:layout_constraintTop_toTopOf="@+id/sensor_img" />

    <TextView
        android:id="@+id/sensor_value"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="6dp"
        android:text="@string/sensor_value"
        app:layout_constraintStart_toEndOf="@+id/sensor_img"
        app:layout_constraintTop_toBottomOf="@+id/sensor_name" />


</androidx.constraintlayout.widget.ConstraintLayout>